--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -26,6 +26,11 @@
           <%= f.text_field :image_url, class: 'form-control input-lg', placeholder: "URL de Imagen" %>
         </div>
 
+        <div class="form-group">
+          <%= f.label :price_per_night, "Precio por noche" %>
+          <%= f.number_field :price_per_night, class: 'form-control input-lg', setp: 0.1 %>
+        </div>
+
         <div class="actions text-right">
           <%= f.submit @room.new_record? ? "Crear Habitación" : "Editar Habitación", class: "btn btn-primary btn-lg btn-block" %>
         </div>
